--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ body {
 main{
   margin: 2em 0;
 }
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .formulario {
   background: rgba(255, 255, 255, 1);
@@ -39,6 +44,7 @@ main{
 .form-option {
   display: flex;
   flex-direction: column;
+  
   margin: 1em 0;
   gap: 0.5em;
 }
@@ -58,6 +64,7 @@ main{
   box-shadow: 1px 1px 10px 0 rgba(199, 199, 199, 0.1);
 }
 textarea {
+  width: 280px;
   border-radius: 0.25rem;
   border: none;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -126,7 +133,7 @@ textarea:focus {
 }
 
 @media screen and (min-width: 620px) {
-  .form-option input {
+  .form-option input, textarea {
     width: 500px;
   }
   .formulario {
