--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ textarea:focus {
   margin-top: 3em;
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 .buttons button {
   padding: 0.8em 1.1em;
